# yolo-insulator

./: .gitignore
docs/superpowers/plans/: 2026-03-19-comparison-visualization.md  2026-03-19-insulator-yolo-detection-pipeline.md  2026-03-20-comparison-visual-readability.md
docs/superpowers/specs/: 2026-03-19-comparison-visualization-design.md  2026-03-19-insulator-yolo-design.md  2026-03-20-comparison-visual-readability-design.md
insulator_yolo/: README.md  pyproject.toml
insulator_yolo/configs/: compare.yaml  dataset.yaml  predict.yaml  train.yaml
insulator_yolo/scripts/: predict.py  prepare_dataset.py  train.py  validate.py  visualize_comparison.py
insulator_yolo/src/insulator_yolo/: config.py  logging_utils.py
insulator_yolo/src/insulator_yolo/cli/: __init__.py  common.py
insulator_yolo/src/insulator_yolo/data/: label_mapping.py  source_dataset.py  split.py  summary.py  yolo_export.py
insulator_yolo/src/insulator_yolo/train/: predictor.py  trainer.py  validator.py
insulator_yolo/src/insulator_yolo/visualization/: __init__.py  comparison.py
insulator_yolo/tests/: conftest.py
insulator_yolo/tests/data/: test_group_split.py  test_label_mapping.py  test_yolo_export.py
insulator_yolo/tests/data/fixtures/: mini_labels.json
insulator_yolo/tests/smoke/: test_prepare_dataset_smoke.py
insulator_yolo/tests/visualization/: test_comparison.py
